--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="Robots" content="ALL" />
   <meta name="Author" content="Author" />
   <link rel="stylesheet" href="style.css" type="text/css" />
-  <title>Darmowy Szablon</title>
+  <title>Static website deployed after being approved</title>
 </head>
 
 <body>
